To do and README

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       </style>
   </head>
   <body> 
+<!--   to do
+  1. create tile set (photoshop) for assets
+  2. Finish first level 
+  3. Add shooting power (Read up) -->
     <script src="js/main.js"></script>
   </body>
 </html>
